Passed the argument filename = 'students.csv' to load_students method. Added new method try_load_students that check if ARVG.first exists and puts the numbers of students uploaded to filename

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
-pane,november
-latte,november
-frutta,november
+Jordan,   november
+Laura,  november
+Rosa,  november
+Maria,  november
+James , november
+Francis, november
